# NextGenGolf

./: .gitignore  README.md  index.html  package.json  pyproject.toml
config/: default.json  default.toml  default.yaml  real_data_example.json  real_data_smoke.json  smoke.json
data/: masters_players_real.csv  masters_players_template.csv  sample_players.csv
src/: App.jsx  ranking.js  styles.css
src/masters_optimizer/: __init__.py  backtest.py  cli.py  config.py  data_layer.py  feature_layer.py  model_layer.py  optimization.py  pipeline.py  regression_checks.py  reporting.py  schemas.py  simulation.py
tests/: test_pipeline.py  test_regression_checks.py
